# annosapiens

./: .gitignore  LICENSE  README.md  build.gradle  foo.py  gene.sh  gpff.py  load_seqgene.py  mapview.py  mypandas.py  pytest.ini  script.py  setup.cfg  variantAnalyzer.py  vcfParser.py
src/genome/: gene.py
src/main/java/idv/louis/annosapiens/: HelloWorld.java
src/test/java/idv/louis/annosapiens/: IntervalQueryTest.java
