[metadata]
name = genome
version = 0.1.0
author = Tang, Cheng-Yang(Louis)
author_email = louis.tang@thermofisher.com

[options]
packages = genome
package_dir = 
    =src

python_requires = >= 3.7

install_requires = 
    pandas >= 1.2.0
    psycopg2 >=2.8

[options.entry_points]
console_scripts = 
    genome=genome.__main__:main
